# Hailo-Application-Code-Examples

./: .gitmodules  CMakeLists.txt  LICENSE  Person.yuv  README.md  build.sh  compilation_testing.py  re_id_overlay.hpp  run_inference_with_image_opencv.py  vstream_re_id_example.cpp
Yolov5_Windows/: CMakeLists.txt  yolov5_post_processing.cpp  yolov5_windows_example.cpp
csharp_infer_wrapper/cpp_full_wrapper/: CMakeLists.txt  infer.cpp  yolo_post_processing.cpp
csharp_infer_wrapper/cpp_full_wrapper/include/: infer.hpp
gstreamer/example2_app/app/: example2_app.cpp  hailo_app_cpp_utils.hpp  hailo_app_data_aggregator.hpp  hailo_app_useful_funcs.hpp  meson.build
gstreamer/example_app/app/: example_app.cpp  example_app_utils.hpp  meson.build
gstreamer/simple_cpp_app/app/: example_app.cpp  example_app_utils.cpp  meson.build
infer_wrapper/c_infer_wrapper/: CMakeLists.txt  infer.c
infer_wrapper/c_infer_wrapper/common/: common.h  hailo_thread.h
infer_wrapper/cpp_wrapper/: CMakeLists.txt  build.sh  infer.cpp  old_CMakeLists.txt  so_CMakeLists.txt
infer_wrapper/cpp_wrapper/include/: infer.hpp
runtime/cpp/async_yolov5/: CMakeLists.txt  CMakeLists_h15.txt  CMakeLists_x86.txt  README.md  get_hef_and_video.sh  multi_async.cpp  tensors_buffers.hpp  yolo_post.cpp  yolo_post.hpp
runtime/cpp/classification/: CMakeLists.txt  README.md  classifier.cpp
runtime/cpp/classifier/: CMakeLists.txt  README.md  classifier.cpp  get_hef.sh  imagenet_labels.hpp
runtime/cpp/depth_estimation_stereo/: CMakeLists.txt  README.md  stereo_depth_estimation.cpp
runtime/cpp/hailo_onnxruntime/: CMakeLists.txt  README.md  get_hef_and_onnx.sh  hailo_ort_example.cpp
runtime/cpp/instance_segmentation/: CMakeLists.txt  README.md  build.sh  get_hef_and_video.sh  instance_seg_postprocess.cpp  instance_seg_postprocess.hpp  instance_segmentation.cpp
runtime/cpp/instance_segmentation/common/: hailo_objects.hpp  hailo_tensors.hpp  nms.hpp  overlay.cpp  overlay.hpp
runtime/cpp/instance_segmentation/yolov5seg/: CMakeLists.txt  README.md  yolov5seg_example.cpp
runtime/cpp/instance_segmentation/yolov8seg/: CMakeLists.txt  README.md
runtime/cpp/object_detection/: CMakeLists.txt  README.md  download_resources.sh  get_resources.sh  object_detection.cpp
runtime/cpp/object_detection/async_detection_inference/: CMakeLists.txt  detection_async.cpp
runtime/cpp/object_detection/async_detection_inference/common/: yolo_hailortpp.cpp
runtime/cpp/object_detection/async_yolov5/: CMakeLists_h15.txt  CMakeLists_x86.txt  README.md  build.sh  yolo_post.hpp
runtime/cpp/object_detection/general_detection_inference/: CMakeLists.txt
runtime/cpp/object_detection/utils/: async_inference.cpp  utils.cpp  utils.hpp
runtime/cpp/object_detection/yolov8_cross_compilation_h15/: README.md  build.sh  download_files.sh  yolov8_inference.cpp  yolov8_postprocess.cpp
runtime/cpp/object_detection/yolov8_cross_compilation_h15/common/: yolo_hailortpp.cpp  yolo_hailortpp.hpp
runtime/cpp/onnxrt_hailo_pipeline/: CMakeLists.txt  README.md  download_resources.sh  instance_seg_postprocess.cpp  instance_seg_postprocess.hpp  onnx_decode.cpp  onnx_decode.hpp  onnxrt_hailo_pipeline.cpp
runtime/cpp/oriented_object_detection/: CMakeLists.txt  README.md  build.sh  oriented_object_detection.cpp
runtime/cpp/oriented_object_detection/utils/: obb_utils.cpp  obb_utils.hpp
runtime/cpp/pose_estimation/: CMakeLists.txt  README.md  yolov8pose_example.cpp  yolov8pose_postprocess.cpp  yolov8pose_postprocess.hpp
runtime/cpp/pose_estimation/yolov8_pose/: README.md  yolov8pose_postprocess.hpp
runtime/cpp/re_id/: CMakeLists.txt  README.md  build.sh  re_id_overlay.cpp  yolo_postprocess.cpp  yolov5-original.json
runtime/cpp/re_id/common/: hailo_objects.hpp  json_config.hpp
runtime/cpp/re_id_example/: CMakeLists.txt  README.md  build.sh  get_frames_and_hefs.sh  re_id_overlay.cpp  vstream_re_id_example.cpp  yolo_output.cpp  yolo_postprocess.cpp
runtime/cpp/re_id_example/common/: yolo_output.hpp
runtime/cpp/semantic_segmentation/: CMakeLists.txt  README.md  build.sh  cityscape_labels.hpp  semantic_segmentation.cpp
runtime/cpp/yolov8_cross_compilation_h15/: CMakeLists.txt  README.md  get_resources.sh  yolov8_inference.cpp
runtime/cpp/yolov8_cross_compilation_h15/common/: hailo_common.hpp  hailo_tensors.hpp
runtime/cpp/zero_shot_classification/: CMakeLists.txt  README.md  clip_example.cpp
runtime/cpp/zero_shot_classification/clip_vit_l14/: CMakeLists.txt
runtime/cpp/zero_shot_classification/tokenizer/: tokenizer.hpp
runtime/csharp_infer_wrapper/cpp_full_wrapper/: CMakeLists.txt  build.sh  double_buffer.hpp  infer.cpp  yolo_post_processing.cpp
runtime/csharp_infer_wrapper/cpp_full_wrapper/include/: infer.hpp
runtime/gstreamer/cpp_cascaded_networks_dynamic_osd/: CMakeLists.txt  README.md  build.sh  cascaded_networks_dynamic_osd.cpp  get_resources.sh  h15_pose_estimation.cpp  udp_stream_display.sh  yolo_hailortpp.cpp  yolo_hailortpp.hpp  yolo_postprocess.cpp  yolo_postprocess.hpp
runtime/gstreamer/cpp_cascaded_networks_dynamic_osd/common/: common.h
ssd_post_process/: CMakeLists.txt  README.md  build.sh  common.h  ssd_inference.cpp  ssd_post_processing.cpp  ssd_post_processing.hpp
ssd_post_process/videos/: get_hefs_and_video.sh
yolov5_windows/: CMakeLists.txt  README.md  yolov5_windows_example.cpp
yolov5_yolov7_detection_cpp/: CMakeLists.txt  README.md  build.sh  get_hefs_and_video_clone_rapidjson.sh  yolo_output.cpp  yolo_output.hpp  yolo_post_processing.cpp  yolo_post_processing.hpp  yolo_postprocess.hpp  yolov5_post_processing.hpp  yolov5_yolov7_inference.cpp
yolov5_yolov7_detection_cpp/common/: hailo_objects.hpp  math.hpp
yolov5_yolov7_detection_cpp/common/labels/: coco_ninety.hpp
yolov8_cpp/: CMakeLists.txt  README.md  build.sh  double_buffer.hpp  get_hefs_and_video.sh  yolov8_inference.cpp  yolov8_postprocess.cpp  yolov8_postprocess.hpp
yolov8_cpp/Rockchip/: build.sh
yolov8_cpp/common/: tensors.hpp
yolov8_cpp/imx8/: CMakeLists.txt  README.md  yolov8_inference.cpp
yolov8_cpp/x86_64/: README.md
(+602 files in other folders)
