################################################
# example2_app
################################################
example2_app_sources = [
'example2_app.cpp',
]

executable('example2_app',
    example2_app_sources,
    dependencies : postprocess_dep,
    gnu_symbol_visibility : 'default',
    install: true,
    install_dir: meson.project_source_root(),
)    
